--- a/index.html
+++ b/index.html
@@ -37,11 +37,49 @@
         </section>
 
         <section id="shop_section">
-
+            <img src="Images/previous.png" title="Go Back To Menu" class="return" width="4%">
+            <div class="coins_container" title="Currency">
+                <p>777</p>
+                <img src="Images/cat_coin.png" width="auto" height="80%">
+            </div>
+            <div id="shop_items_container">
+                <div class="shop_items_box">
+                    <img src="Images/Shop Items/item1.png">
+                    <div class="price">777 <img src="Images/cat_coin.png"></div>
+                </div>
+                <div class="shop_items_box">
+                    <img src="Images/Shop Items/item2.png">
+                    <div class="price">777 <img src="Images/cat_coin.png"></div>
+                </div>
+                <div class="shop_items_box">
+                    <img src="Images/Shop Items/item3.png">
+                    <div class="price">777 <img src="Images/cat_coin.png"></div>
+                </div>
+                <div class="shop_items_box">
+                    <img src="Images/Shop Items/item4.png">
+                    <div class="price">777 <img src="Images/cat_coin.png"></div>
+                </div>
+                <div class="shop_items_box">
+                    <img src="Images/Shop Items/item5.png">
+                    <div class="price">777 <img src="Images/cat_coin.png"></div>
+                </div>
+                <div class="shop_items_box">
+                    <img src="Images/Shop Items/item5.png">
+                    <div class="price">777 <img src="Images/cat_coin.png"></div>
+                </div>
+                <div class="shop_items_box">
+                    <img src="Images/Shop Items/item5.png">
+                    <div class="price">777 <img src="Images/cat_coin.png"></div>
+                </div>
+                <div class="shop_items_box">
+                    <img src="Images/Shop Items/item5.png">
+                    <div class="price">777 <img src="Images/cat_coin.png"></div>
+                </div>
+            </div>
         </section>
 
         <section id="inventory_section">
-
+            <img src="Images/previous.png" class="return">
         </section>
 
         <section id="settings_section">
