--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img src="Images/cat-png-gif.gif" id="cat_gif">
             <img src="Images/giphy.gif" id="guitar_playing_cat">
             <img src="Images/animated-gif-transparent-cat-free-download-cat-png-gif-258_232.gif" id="dancing_cat">
-            <audio id="audio" controls src="Sounds/background_song.mp3"></audio>
+            <audio id="audio" controls src="Sounds/background_song.mp3" autoplay></audio>
         </main>
 
         <section id="first_level">
@@ -79,7 +79,7 @@
         </section>
 
         <section id="inventory_section">
-            <img src="Images/previous.png" class="return">
+            <img src="Images/previous.png" title="Go Back To Menu" class="return" width="4%">
         </section>
 
         <section id="settings_section">
