--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     </head>
     <body>
         <!-- Preloader -->
-        <!-- <div id="preloader"><img src="preloader.gif"></div> -->
+        <div id="preloader"><img src="Images/preloader.gif" width="10%"></div>
+
+        <!-- Settings Pop Up -->
+        <div id="settings_section"></div>
 
         <!-- Loading Page -->
         <main id="loading_page">
@@ -20,16 +23,17 @@
             <div class="menu_btns" id="inventory">Inventory</div>
             <div class="menu_btns" id="settings">Settings</div>
             <img src="Images/earth.png" id="earth">
-            <img src="Images/sun.png" id="sun">
+            <img src="Images/sun.gif" id="sun">
             <img src="Images/moon.png" id="moon">
             <img src="Images/cat_chilling_near_sun.png" id="chilling_cat_near_sun">
             <img src="Images/astronaut_cat.png" id="astronaut_cat">
             <img src="Images/astronaut_cat_2.png" id="astronaut_cat_2">
             <img src="Images/astronaut_cat_3.png" id="astronaut_cat_3">
+            <img src="Images/astronaut_cat_4.png" id="astronaut_cat_4">
             <img src="Images/cat-png-gif.gif" id="cat_gif">
             <img src="Images/giphy.gif" id="guitar_playing_cat">
             <img src="Images/animated-gif-transparent-cat-free-download-cat-png-gif-258_232.gif" id="dancing_cat">
-            <audio id="audio" controls src="Sounds/background_song.mp3" autoplay></audio>
+            <audio id="audio" controls src="Sounds/background_song.mp3"></audio>
         </main>
 
         <section id="first_level">
