--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h4 id="press_to_enter">Press <kbd>ENTER</kbd> to start</h4>
             <div class="menu_btns" id="shop">Shop</div>
             <div class="menu_btns" id="inventory">Inventory</div>
-            <div class="menu_btns" class="settings">Settings</div>
+            <div class="menu_btns settings">Settings</div>
             <img src="Images/earth.png" id="earth">
             <img src="Images/sun.gif" id="sun">
             <img src="Images/moon.png" id="moon">
