--- a/index.html
+++ b/index.html
@@ -77,28 +77,6 @@
             </div>
         </main>
 
-        <!-- Levels -->
-        <section id="levels_section">
-            <div class="return_container">
-                <img src="Images/previous.png" title="Go Back To Menu" width="auto" height="100%">
-            </div>
-            <div class="settings settings_btn">
-                <img src="Images/Levels/settings_icon.png" title="Settings" width="auto" height="100%">
-            </div>
-            <img src="Images/animated-gif-transparent-cat-free-download-cat-png-gif-258_232.gif" id="dancing_cat_in_levels_section">
-            <div class="profile">
-                <div class="avatar">
-                    <img src="Images/Shop Items/avatar.png">
-                </div>
-                <div class="stats">
-                    <div class="name">Your Name </div>
-                    <label for="exp">Level 1</label>
-                    <progress id="exp" class="experience" value="32" max="100">32%</progress>
-                    <label for="exp">32/100 XP</label>
-                </div>
-            </div>
-        </section>
-
         <!-- Shop Section -->
         <section id="shop_section">
             <div class="return_container">
@@ -146,6 +124,34 @@
             </div>
         </section>
 
+
+        <!-- Levels -->
+        <section id="levels_section">
+            <div class="return_container">
+                <img src="Images/previous.png" title="Go Back To Menu" width="auto" height="100%">
+            </div>
+            <div class="settings settings_btn">
+                <img src="Images/Levels/settings_icon.png" title="Settings" width="auto" height="100%">
+            </div>
+            <img src="Images/animated-gif-transparent-cat-free-download-cat-png-gif-258_232.gif" id="dancing_cat_in_levels_section">
+            <div class="profile">
+                <div class="avatar">
+                    <img src="Images/Shop Items/avatar.png">
+                </div>
+                <div class="stats">
+                    <div class="name">Your Name </div>
+                    <label for="exp">Level 1</label>
+                    <progress id="exp" class="experience" value="32" max="100">32%</progress>
+                    <label for="exp">32/100 XP</label>
+                </div>
+            </div>
+            
+        </section>
+
+
+        <!-- Tutorial Level -->
+
+        <!-- First Level -->
 
         <script src="javascript/jquery.js"></script>
         <script src="javascript/main.js"></script>
